<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vue.activity.EcranAccueilActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="188dp"
        app:srcCompat="@mipmap/uni_logo"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="29dp" />



    <Button
        android:id="@+id/btnparcours"
        android:layout_width="397dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button2"
        android:text="Effectuer un choix de parcours"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnconsulterparcours"
        android:layout_width="396dp"
        android:layout_height="103dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_button2"
        android:text="Consulter son parcours"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btndeconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Se déconnecter"
        android:textSize="15sp"
        android:layout_gravity="right"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />
</LinearLayout>