<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".vue.activity.InscriptionActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Formulaire d'inscription"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/numEtudiant"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:background="@drawable/border"
        android:hint="Numéro étudiant"
        android:inputType="textShortMessage"
        android:paddingLeft="10dp"
        android:textColorHint="#000"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:background="@drawable/border"
        android:hint="Nom de famille"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="#000"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/prénom"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:background="@drawable/border"
        android:hint="Prénom"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColorHint="#000"
        android:textSize="22dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/naissance"
        android:hint="Date de naissance"
        android:paddingLeft="10dp"
        android:layout_margin="30dp"
        android:textColorHint="#000"
        android:textSize="22dp"
        android:background="@drawable/border"
        android:inputType="date"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/mdp"
        android:hint="Mot de passe"
        android:paddingLeft="10dp"
        android:layout_margin="30dp"
        android:textColorHint="#000"
        android:textSize="22dp"
        android:background="@drawable/border"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/buttonValiderInscription"
        android:layout_width="358dp"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button4"
        android:text="Valider" />
    </LinearLayout>