<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.activity.RecapActivity"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRecap"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Récapitulatif"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Semestre 1:"
                    android:textColor="@android:color/holo_red_light"></TextView>

                <TextView
                    android:id="@+id/semestre1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="Matières choisies au s1">
                </TextView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Semestre 2:"
                    android:textColor="@android:color/holo_red_light"></TextView>

                <TextView
                    android:id="@+id/semestre2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="Matières choisies au s2">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Semestre 3:"
                    android:textColor="@android:color/holo_red_light"></TextView>

                <TextView
                    android:id="@+id/semestre3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="Matières choisies au s3">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent" 
                    android:layout_height="match_parent"
                    android:text="Semestre 4:"
                    android:textColor="@android:color/holo_red_light"></TextView>

                <TextView
                    android:id="@+id/semestre4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="Matières choisies au s4">
                </TextView>

            </LinearLayout>

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical">

    <Button
        android:id="@+id/RetourArriereRecap"
        android:layout_width="358dp"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:text="Recommencer mon parcours" />

        <Button
            android:id="@+id/buttonConfirmation"
            android:layout_width="358dp"
            android:layout_height="70dp"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="Finaliser mon inscription" />

    </LinearLayout>

</LinearLayout>
