<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="choix">
        <item>Parcours personalisé</item>
        <item>Parcours prédéfini</item>
    </string-array>

    <string-array name="parcours">
        <item>Maths</item>
        <item>Science de la vie</item>
        <item>Physique</item>
        <item>Chimie</item>
        <item>Informatique</item>
        <item>Informatique (L1)</item>
        <item>Mathématiques (L1)</item>
    </string-array>

</resources>